--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Constanza Cendon", email = "cendonconstanza@gmail.com"}
 ]
 keywords = ["llm", "agent-based-model", "finance", "herding", "simulation"]
 classifiers = [
